# local_devops

./: .env.example  .gitignore  AGENT.md  AGENTS.md  DESIGN.md  README.md  next.config.ts  package-lock.json  package.json  reset-database.ps1  start-backend.ps1  start-database.ps1  start-frontend.ps1
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_core_tables.py  20260329_0001_create_user_tables.py
backend/app/: auth.py  config.py  db.py  instagram.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  health.py  response.py  router.py
backend/app/api/routes/: health.py  v1.py
backend/app/api/v1/: __init__.py  admin.py  approvals.py  auth.py  dashboard.py  failures.py  health.py
backend/app/core/: config.py  db.py  request_id.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  user.py  user_withdrawal_history.py
backend/app/domain/approval/: filters.py  repository.py  schemas.py  service.py
backend/app/domain/dashboard/: filters.py  repository.py  schemas.py  service.py
backend/app/domain/publish/: filters.py  repository.py  schemas.py  service.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: admin.py  auth.py
backend/tests/: test_api.py
database/: .env.example  README.md  docker-compose.yml
docs/: devops-architecture.md
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  (+2 more)
(+233 files in other folders)
