[project]
name = "sns-automation-backend"
version = "0.1.0"
description = "SNS automation deployment backend"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.5",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.1",
  "pydantic-settings>=2.10.1",
  "psycopg[binary]>=3.2.10",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0"
]

[tool.uv]
package = false
