[project]
name = "rdd-web-backend"
version = "0.1.0"
description = "FastAPI backend for RDD_WEB_V1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
  "alembic>=1.16.4",
  "pydantic-settings>=2.10.1",
  "passlib[argon2]>=1.7.4",
  "python-multipart>=0.0.20",
  "email-validator>=2.2.0",
  "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
